fixed spacing on desktop

--- a/styles/style.css
+++ b/styles/style.css
@@ -126,7 +126,7 @@ section img {
 }
 
 .contact h4 {
-    margin: 0.5rem 0;
+    margin: 0;
     font-weight: normal;
 }
 
@@ -181,7 +181,7 @@ body {
 .portfolio-main-container {
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
+    gap: 1.2rem;
 }
 
 .portfolio-section {
@@ -262,6 +262,7 @@ header p {
 
      .student-profile {
         gap: 4rem;
+        margin-top: 5rem;
      }
 
      .student-profile p {
@@ -285,6 +286,11 @@ header p {
 
      h2 {
         margin-top: 4rem;
+        margin-bottom: 5rem;
+     }
+
+     footer {
+        padding-bottom: 0;
      }
 
  
